# cv-api_project

./: .gitignore  CMakeLists.txt  CmakeList.txt  Dockerfile  README.md
include/: HttpServer.h  ImageDownloader.h  ImageProcessor.h  JsonUtils.h  ThreadManager.h
src/: HttpServer.cpp  ImageDownloader.cpp  ImageProcessor.cpp  JsonUtils.cpp  ThreadManager.cpp  main.cpp
